# cortex

./: .env  .gitignore  asset-manifest.json  index.html  makefile  package-lock.json  package.json  readme.md  serviceworker.js
.github/workflows/: release.yml
app/: Cargo.toml  package-lock.json  package.json
app/public/: index.html  manifest.json
app/public/css/: animations.css  imports.css  layout-login.css  layout-main.css  main.css
app/src/: index.js  lib.rs
app/src/components/: app.rs  button.css  button.js  button.rs  context_menu.rs  context_menu_content.rs  error.rs  input.rs  inputbox.rs  knowledgebase.rs  login_page.rs  main_page.rs  messages.rs  mod.rs  page_header.rs  page_layout.rs  password-list.css  password-list.js  password_category_editor.rs  password_editor.rs  password_list.rs  svg.rs  textbox.rs
app/src/pages/: home.rs  knowledge.rs  knowledgebase.rs  login.js  login.rs  main.js  main.rs  mod.rs  not-found.js  passwords.rs  sync_data.rs  todo.rs
app/src/pages/knowledge/: add.rs  category.rs  edit.rs  list.rs  mod.rs  page.rs
app/src/pages/passwords/: add_category.rs  add_password.rs  edit_category.rs  edit_password.rs  import_export.rs  list.rs  mod.rs  page.rs
app/src/services/: clipboard.rs  cryptography.rs  knowledge.rs  login.rs  mod.rs  passwords.rs  store.rs  webrtc.rs
docs/: index.html  login-loading.html  login.html  main.html
docs/css/: animations.css  imports.css  layout-login.css  (+1 more)
lib/: Cargo.toml
public/: fonts.css  index.html  manifest.json  serviceworker.js  styles.css
src/: app.js  index.css  index.js
(+85 files in other folders)
