[package]
name = "app"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crypto = { path = "../crypto" }
yew = "0.17"
wasm-bindgen = "0.2.67"
web-sys = { version = "0.3", features = ["Clipboard", "Navigator"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"